# sivtr

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  install.sh
.claude/commands/: diagnose.md  test-changed.md
.claude/rules/: module-navigation.md  rust-patterns.md
.github/workflows/: release.yml  rust.yml
crates/sivtr-core/src/: ai.rs  claude.rs  codex.rs  lib.rs  opencode.rs  pi.rs  time.rs  workspace.rs
crates/sivtr-core/src/capture/: scrollback.rs
crates/sivtr-core/src/config/: mod.rs
crates/sivtr-core/src/export/: clipboard.rs
crates/sivtr-core/src/history/: mod.rs  query.rs  store.rs  sync.rs
crates/sivtr-core/src/record/: index.rs  mod.rs  model.rs  refs.rs  similarity.rs
crates/sivtr-core/src/session/: entry.rs
docs-site/: astro.config.mjs  package.json
docs-site/src/content/docs/: index.md
docs-site/src/content/docs/explanation/: architecture.md  local-first-privacy.md  (+1 more)
editors/vscode/: README.md  package.json
editors/vscode/src/: commandLine.test.ts  commandLine.ts  extension.ts
skills/sivtr-memory/: SKILL.md
skills/sivtr-memory/references/: commands.md  patterns.md
src/: cli.rs  main.rs
src/commands/: browse.rs  capture_history.rs  clear.rs  codex.rs  config.rs  copy.rs  doctor.rs  flush.rs  hotkey.rs  import.rs  init.rs  layer.rs  mod.rs  pipe.rs  records.rs  run.rs  search.rs  show.rs  time_filter.rs  work.rs  work_json.rs  zoom.rs
src/commands/copy/: workspace_picker.rs
src/commands/workset/: mod.rs  source.rs
src/tui/: content_markdown.rs  content_view.rs  workspace.rs  workspace_search.rs
(+64 files in other folders)
