[workspace]
members = ["crates/sivtr-core", "."]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Ariestar/sivtr"

[package]
name = "sivtr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Terminal output workspace for the AI era - capture, sift, browse, search, select, and reuse terminal output and AI coding sessions"
keywords = ["terminal", "cli", "tui", "codex", "ai"]
categories = ["command-line-utilities", "development-tools"]
default-run = "sivtr"

[[bin]]
name = "sivtr"
path = "src/main.rs"

[dependencies]
sivtr-core = { version = "0.1.3", path = "crates/sivtr-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
atty = "0.2"
arboard = "3"
dirs = "5"
regex = "1"
similar = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "processenv", "processthreadsapi", "winbase", "winnt", "winuser", "windef", "minwindef"] }

[dev-dependencies]
tempfile = "3"
